--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hi, Im Oli!<h1>
+<p>Im a Cyber Security Student.</p>
+<p>Written in NeoVim btw.</p>
 </body>
 </html>
