--- a/index.html
+++ b/index.html
@@ -1,8 +1,38 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hi, Im Oli!<h1>
-<p>Im a Cyber Security Student.</p>
-<p>Written in NeoVim btw.</p>
-</body>
+  <head>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <header>
+      <h1>Hi, I'm Oli<h1>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+
+    <section id="about">
+      <h2>About Me</h2>
+      <p>Hi, Im a first year Cyber Security Student.</p>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <p>None</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+    </section>
+
+    <footer>
+      <p>&copy; 2025 Oli</p>
+      <p2> Written in NeoVim BTW</p2>
+    </footer>
+  </body>
 </html>
+
