Changed some info + alligned the arch logo

--- a/index.html
+++ b/index.html
@@ -20,40 +20,59 @@
       <a href="#projects" class="tab">projects</a>
       <a href="#contact" class="tab">contact</a>
     </div>
-
     <div class="terminal-content">
       <section id="about">
-        <div class="prompt">$ neofetch</div>
-        <pre class="neofetch-output">
-            oli@archbook
-        -------------------------
-        OS: Arch Linux x86_64
-        Host: ASUS
-        Kernel: 6.5.0-arch1-1
-        Shell: bash 5.1.16
-        Terminal: Web Emulator
-        CPU: Intel i7-12650H
-        GPU: NVIDIA RTX 2050
-        Memory: 16GB
-        -------------------------------
-        </pre>
+        <div class="prompt">$ fastfetch</div>
+        <div style="display: flex; align-items: flex-start; gap: 24px;">
+          <pre class="ascii-art" style="margin:0;">
+                      -`                   
+                     .o+`                  
+                    `ooo/                  
+                   `+oooo:                 
+                  `+oooooo:                
+                  -+oooooo+:               
+                `/:-:++oooo+:              
+               `/++++/+++++++:             
+              `/++++++++++++++:            
+             `/+++ooooooooooooo/`          
+            ./ooosssso++osssssso+`         
+           .oossssso-````/ossssss+`        
+          -osssssso.      :ssssssso.       
+         :osssssss/        osssso+++.      
+        /ossssssss/        +ssssooo/-      
+      `/ossssso+/:-        -:/+osssso+-    
+     `+sso+:-`                 `.-/+oso:   
+    `++:.                           `-/+/  
+    .`                                 `/
+          </pre>
+          <pre class="neofetch-output" style="margin:0;">
+                oli@archbook
+            -------------------------
+            OS: Arch Linux x86_64
+            Age: 19
+            Uni: Sheffileld Hallam University
+            Course: Cyber Security with Forensics
+            Terminal: Web Emulator
+            CPU: Intel i7-12650H
+            GPU: NVIDIA RTX 2050
+            Memory: 16GB
+            -------------------------------
+          </pre>
+        </div>
       </section>
+
 
       <section id="projects">
         <div class="prompt">$ ls ~/projects</div>
         <div class="response">
-          - <a href="#">personal-website</a><br />
-          - <a href="#">cli-notetaker</a><br />
-          - <a href="#">wifi-fix-script</a>
+          - <a href="https://github.com/1144oli/1144oli.github.io">This Website</a><br />
         </div>
       </section>
 
       <section id="contact">
         <div class="prompt">$ cat ~/contact.txt</div>
         <div class="response">
-          Email: oli@example.com<br/>
-          GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a><br/>
-          LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a>
+          GitHub: <a href="https://github.com/1144oli" target="_blank">1144oli</a><br/>
         </div>
       </section>
     </div>
