Made some changes to title bar and added kitty logo

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Terminal Portfolio</title>
+  <title>Oli</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="terminal-window">
     <div class="terminal-bar">
-      <span class="dot red"></span>
-      <span class="dot yellow"></span>
-      <span class="dot green"></span>
+      <img src="photos/kitty.svg" alt="Kitty Logo" style="height: 24px; vertical-align: middle; margin-right: 8px;">
       <span class="title">oli@archbook: ~</span>
+      <span class="dot green"></span>
+      <span class="dot yellow"></span>
+      <span class="dot red"></span>
     </div>
 
     <div class="tabs">
