changed title bar centred it

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 <body>
   <div class="terminal-window">
     <div class="terminal-bar">
-      <img src="photos/kitty.svg" alt="Kitty Logo" style="height: 24px; vertical-align: middle; margin-right: 8px;">
-      <span class="title">oli@archbook: ~</span>
-      <span class="dot green"></span>
-      <span class="dot yellow"></span>
-      <span class="dot red"></span>
-    </div>
+  <img src="photos/kitty.svg" alt="Kitty Logo" style="height: 24px; vertical-align: middle; margin-right: 8px;">
+  <div class="terminal-bar-center">
+    <span class="title">oli@archbook: ~</span>
+  </div>
+  <div class="terminal-bar-right">
+    <span class="dot green"></span>
+    <span class="dot yellow"></span>
+    <span class="dot red"></span>
+  </div>
+</div>
+
 
     <div class="tabs">
       <a href="#about" class="tab">about</a>
