Made the terminal dragable

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a href="#about" class="tab">about</a>
       <a href="#projects" class="tab">projects</a>
       <a href="#contact" class="tab">contact</a>
+      <a href="https://discord.com/users/719643037558636614" class="tab">+</a>
     </div>
     <div class="terminal-content">
       <section id="about">
@@ -52,16 +53,16 @@
     .`                                 `/
           </pre>
           <pre class="neofetch-output" style="margin:0;">
-                oli@archbook
+            oli@archbook
             -------------------------
             OS: Arch Linux x86_64
-            Age: 19
+            Uptime: 19 years
             Uni: Sheffileld Hallam University
             Course: Cyber Security with Forensics
             Terminal: Web Emulator
             CPU: Intel i7-12650H
             GPU: NVIDIA RTX 2050
-            Memory: 16GB
+            Interests: Linux
             -------------------------------
           </pre>
         </div>
@@ -83,6 +84,7 @@
       </section>
     </div>
   </div>
+<script src="drag.js"></script>
 </body>
 </html>
 
