Add basic task bar and made kitty close-able

--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
   </div>
 </div>
 
-
-    <div class="tabs">
-      <a href="#about" class="tab">about</a>
-      <a href="#projects" class="tab">projects</a>
-      <a href="#contact" class="tab">contact</a>
-      <a href="https://discord.com/users/719643037558636614" class="tab">+</a>
-    </div>
     <div class="terminal-content">
       <section id="about">
         <div class="prompt">$ fastfetch</div>
@@ -84,6 +77,21 @@
       </section>
     </div>
   </div>
+  <div class="taskbar">
+    <div class="taskbar-left">
+      <img src="photos/archlogo.png" alt="Arch" class="taskbar-icon" />
+      <img src="photos/Dolphin_icon_in_Plasma_5.svg.png" alt="Folder" class="taskbar-icon" />
+      <img src="photos/kitty.svg" alt="Terminal" class="taskbar-icon" />
+      <img src="photos/png-clipart-neovim-source-code-extensibility-computer-software-github-angle-rectangle-thumbnail.png" alt="NeoVIm" class="taskbar-icon taskbar-active" />
+    </div>
+    <div class="taskbar-center"></div>
+    <div class="taskbar-right">
+      <img src="photos/3119338.png" alt="Notification" class="taskbar-icon" />
+      <span class="taskbar-time" id="taskbar-time"></span>
+      <span class="taskbar-date" id="taskbar-date"></span>
+    </div>
+  </div>
+  <script src="taskbar.js"></script>
 <script src="drag.js"></script>
 </body>
 </html>
