made terminal write-able and added some animations to kate

--- a/index.html
+++ b/index.html
@@ -71,8 +71,15 @@
           GitHub: <a href="https://github.com/1144oli" target="_blank">1144oli</a><br/>
         </div>
       </section>
-    </div>
-  </div>
+      <section id="input-terminal">
+        <div id="terminal-history" style="margin-bottom: 8px;"></div>
+        <form id="terminal-form" style="display: flex; align-items: center; gap: 8px;" autocomplete="off">
+          <div class="prompt">$</div>
+          <input id="terminal-input" type="text" style="background: transparent; border: none; color: inherit; font-family: monospace; outline: none; width: 60%; font-size: 1em; line-height: 1.5em; height: 1.5em;" autocomplete="off" />
+        </form>
+      </section>
+        </div>
+      </div>
 
   
   <div class="kate-window" id="kate-window" style="display:none; position:absolute; top:80px; left:120px; z-index:10;">
