added man and rm-f

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
           GitHub: <a href="https://github.com/1144oli" target="_blank">1144oli</a><br/>
         </div>
       </section>
+        <section id="man">
+        <div class="prompt">$ man</div>
+        <div class="response">
+          Available commands: man, about, projects, contact, clear, github
+        </div>
+      </section>
       <section id="input-terminal">
         <div id="terminal-history" style="margin-bottom: 8px;"></div>
         <form id="terminal-form" style="display: flex; align-items: center; gap: 8px;" autocomplete="off">
