--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
     <div class="taskbar-center"></div>
     <div class="taskbar-right">
-      <img src="photos/3119338.png" alt="Notification" class="taskbar-icon" />
+      <img src="photos/notification-bell.svg" alt="Notification" class="taskbar-icon" />
       <span class="taskbar-time" id="taskbar-time"></span>
       <span class="taskbar-date" id="taskbar-date"></span>
     </div>
