--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div id="mobile-warning" style="display:none; position:fixed; inset:0; background:#111; color:#0f0; z-index:99999; font-family:monospace; text-align:center; padding-top:5em;">
+  <h1>Sorry!</h1>
+  <p>This website is only supported on desktop devices.</p>
+</div>
   <div class="terminal-window">
     <div class="terminal-bar">
       <img src="photos/kitty.svg" alt="Kitty Logo" style="height: 24px; vertical-align: middle; margin-right: 8px;">
