--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             -------------------------
             OS: Arch Linux x86_64
             Uptime: 19 years
-            Uni: Sheffileld Hallam University
+            Uni: Sheffield Hallam University
             Course: Cyber Security with Forensics
             Terminal: Kitty
             Shell: Bash
