--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             oli@archbook
             -------------------------
             OS: Arch Linux x86_64
-            Uptime: 19 years
+            Age: 19 years
             Uni: Sheffield Hallam University
             Course: Cyber Security with Forensics
             Terminal: Kitty
