Changed Nvim logo and removed mobile page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
 </head>
 <body>
   <div id="mobile-warning" style="display:none; position:fixed; inset:0; background:#111; color:#0f0; z-index:99999; font-family:monospace; text-align:center; padding-top:5em;">
-  <h1>Sorry!</h1>
-  <p>This website is only supported on desktop devices.</p>
-</div>
+    <h1>Sorry!</h1>
+    <p>This website is only supported on desktop devices.</p>
+    <div style="margin-top:2em; text-align:left; display:inline-block;">
+      <strong>About</strong><br>
+      OS: EndeavourOS x86_64<br>
+      Age: 19 years<br>
+      Uni: Sheffileld Hallam University<br>
+      Course: Cyber Security with Forensics<br>
+      Interests: Linux<br>
+      <br>
+      <strong>Projects</strong><br>
+      - <a href="https://github.com/1144oli/1144oli.github.io" style="color:#0f0;" target="_blank">This Website</a><br>
+      <br>
+      <strong>Contact</strong><br>
+      GitHub: <a href="https://github.com/1144oli" style="color:#0f0;" target="_blank">1144oli</a><br>
+    </div>
+  </div>
   <div class="terminal-window">
     <div class="terminal-bar">
       <img src="photos/kitty.svg" alt="Kitty Logo" style="height: 24px; vertical-align: middle; margin-right: 8px;">
@@ -57,7 +71,7 @@
             Course: Cyber Security with Forensics
             Terminal: Kitty
             Shell: Bash
-            Interests: Linux
+            Interests: Linux & Cyber Security
             -------------------------------
           </pre>
         </div>
