--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         <span class="title">oli@archbook: ~</span>
       </div>
       <div class="terminal-bar-right">
-        <span class="dot yellow" id="minimize-btn" style="cursor:pointer;"></span>
         <span class="dot red" id="close-btn" style="cursor:pointer;"></span>
       </div>
     </div> 
@@ -70,7 +69,7 @@
             Uni: Sheffield Hallam University
             Course: Cyber Security with Forensics
             Terminal: Kitty
-            Shell: Bash
+            Shell: zsh
             Interests: Linux & Cyber Security
             -------------------------------
           </pre>
@@ -92,7 +91,7 @@
         <section id="man">
         <div class="prompt">$ man</div>
         <div class="response">
-          Available commands: man, about, projects, contact, clear, github
+          Available commands: man, about, projects, contact, clear, github, uname, whoami, date, echo, neofetch, ls, pwd
         </div>
       </section>
       <section id="input-terminal">
@@ -113,8 +112,7 @@
         <span class="title">oli@archbook: kate</span>
       </div>
       <div class="terminal-bar-right">
-        <span class="dot yellow"></span>
-        <span class="dot red" id="kate-close-btn" style="cursor:pointer;"></span>
+        <span class="dot red close-btn" style="cursor:pointer;"></span>
       </div>
     </div>
     <div class="terminal-content" style="background:#414142; color:#2e3440; min-width:400px; min-height:200px;">
@@ -132,10 +130,9 @@
         <div class="terminal-bar-center">
           <span class="title">oli@archbook: nvim</span>
         </div>
-        <div class="terminal-bar-right">
-          <span class="dot yellow"></span>
-          <span class="dot red" id="neovim-close-btn" style="cursor:pointer;"></span>
-        </div>
+      <div class="terminal-bar-right">
+        <span class="dot red" id="close-btn" style="cursor:pointer;"></span>
+      </div>
       </div>
       <div class="terminal-content" style="background:#1e222a; color:#a9b1d6; min-width:500px; min-height:300px; font-family:monospace; position:relative;">
         <div style="padding:16px;">
