some small changes

--- a/index .html
+++ b/index .html
@@ -14,9 +14,9 @@
       <strong>About</strong><br>
       OS: EndeavourOS x86_64<br>
       Age: 19 years<br>
-      Uni: Sheffileld Hallam University<br>
+      Uni: Sheffileld <br>
       Course: Cyber Security with Forensics<br>
-      Interests: Linux<br>
+      Interests: Linux, Cyber Security, & homelabbing<br>
       <br>
       <strong>Projects</strong><br>
       - <a href="https://github.com/1144oli/1144oli.github.io" style="color:#0f0;" target="_blank">This Website</a><br>
@@ -66,11 +66,11 @@
             -------------------------
             OS: Arch Linux x86_64
             Age: 19 years
-            Uni: Sheffield Hallam University
+            Uni: Sheffield 
             Course: Cyber Security with Forensics
             Terminal: Kitty
             Shell: zsh
-            Interests: Linux & Cyber Security
+            Interests: Linux, Cyber Security, & homelabbing
             -------------------------------
           </pre>
         </div>
@@ -79,6 +79,7 @@
         <div class="prompt">$ ls ~/projects</div>
         <div class="response">
           - <a href="https://github.com/1144oli/1144oli.github.io">This Website</a><br />
+          - <a href="https://en.wikipedia.org/wiki/Home_server">Self hosted</a></div>a><br />
         </div>
       </section>
 
