--- a/index .html
+++ b/index .html
@@ -70,7 +70,7 @@
             Course: Cyber Security with Forensics
             Terminal: Kitty
             Shell: zsh
-            Interests: Linux, Cyber Security, & homelabbing and caiden
+            Interests: Linux, Cyber Security, & homelabbing
             -------------------------------
           </pre>
         </div>
