changed the name + testing

--- a/index .html
+++ b/index .html
@@ -64,7 +64,7 @@
           <pre class="neofetch-output" style="margin:0;">
             oli@archbook
             -------------------------
-            OS: Arch Linux x86_64
+            OS: EndeavourOS
             Age: 19 years
             Uni: Sheffield 
             Course: Cyber Security with Forensics
