--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cybersecurity Portfolio</title>
+    <title>Oli | Cyber Security Student</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     
     <div class="container">
         <header>
-            <h1>Security Portfolio</h1>
+            <h1>Oli</h1>
             <p class="typing-effect">University Student | Linux Enjoyer | Homelabbing Enthusiast</p>
             <nav>
                 <a href="#projects">Projects</a>
@@ -109,4 +109,5 @@
     <script src="drag.js"></script>
 </body>
 </html>
+
 
