fixed txt boxes and spelling!!

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <section id="about" class="section">
             <h2>About Me</h2>
 		<p>Hi! I'm Oli, a 19 year old from the UK &#x1f1ec;&#x1f1e7; currently doing a Cyber Security with Forensics degree in Sheffield.  	</p>
-            </div>
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
@@ -40,7 +39,7 @@
                 </a>
                 <a href="https://cyberoli.uk/" class="project-card" target="_blank" rel="noopener noreferrer">
                     <h3>[02] Homelab</h3>
-                    <p>Becoming Self-Hosted has been an interesting idea for me for awhile. Recently, I bought a old PC and put proxmox on it!</p>
+                    <p>Becoming Self-Hosted has been an interesting idea for me for awhile. Recently, I bought an old PC and put proxmox on it!</p>
                     <div class="tags">
                         <span class="tag">Docker</span>
                         <span class="tag">Proxmox</span>
@@ -49,42 +48,6 @@
                 </a>
             </div>
         </section>
-        <section id="skills" class="section">
-            <h2>Skills</h2>
-            <div class="skill-bars">
-                <div class="skill">
-                    <div class="skill-name">Penetration Testing</div>
-                    <div class="skill-bar">
-                        <div class="skill-level" style="width: 90%;"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill-name">Network Security</div>
-                    <div class="skill-bar">
-                        <div class="skill-level" style="width: 85%;"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill-name">Web Application Security</div>
-                    <div class="skill-bar">
-                        <div class="skill-level" style="width: 88%;"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill-name">Malware Analysis</div>
-                    <div class="skill-bar">
-                        <div class="skill-level" style="width: 75%;"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill-name">Scripting (Python/Bash)</div>
-                    <div class="skill-bar">
-                        <div class="skill-level" style="width: 92%;"></div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <section id="contact" class="section">
             <h2>Contact</h2>
 		<p>Lets talk!</p>
@@ -92,7 +55,7 @@
                 <div class="terminal-line"><span class="prompt">root@security:~#</span> echo $EMAIL</div>
 		<div class="terminal-line">oli@cyberoli.uk</div>
                 <div class="terminal-line"><span class="prompt">root@security:~#</span> echo $LOCATION</div>
-                <div class="terminal-line">Available for remote projects</div>
+                <div class="terminal-line">Sheffield</div>
             </div>
             <div class="social-links">
                 <a href="https://github.com/1144oli">GitHub</a>
