Made a new blog (populate) and changed project ref

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span class="tag">JS</span>
         </div>
     </a>
-    <a href="https://cyberoli.uk/" class="project-card" target="_blank" rel="noopener noreferrer">
+    <a href="https://cyberoli.uk/posts.html?post=Everyones_Homelabbing" class="project-card" target="_blank" rel="noopener noreferrer">
         <h3>[02] Homelab</h3>
         <p>Becoming Self-Hosted has been an interesting idea for me for awhile. Recently, I bought an old PC and put proxmox on it!</p>
         <div class="tags">
