--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <canvas class="matrix-bg" id="matrix"></canvas>
     
     <div class="container">
-        <header>
-            <h1>Oli</h1>
-            <p class="typing-effect">University Student | Linux Enjoyer | Homelabbing Enthusiast</p>
-            <nav>
-                <a href="#projects">Projects</a>
-		<a href="blog.html">Blogs</a>	
-                <a href="#contact">Contact</a>
-            </nav>
-        </header>
-
+      <header>
+          <img src="photos/discordpfp.png" alt="Oli's Profile Picture" class="profile-pic">
+          <div class="header-content">
+              <h1>Oli</h1>
+              <p class="typing-effect">University Student | Linux Enjoyer | Homelabbing Enthusiast</p>
+              <nav>
+                  <a href="#projects">Projects</a>
+                  <a href="blog">Blogs</a>	
+                  <a href="#contact">Contact</a>
+              </nav>
+          </div>
+      </header>
         <section id="about" class="section">
             <h2>About Me</h2>
 		<p>Hi! I'm Oli, a 19 year old from the UK &#x1f1ec;&#x1f1e7; currently studying for a Cyber Security with Forensics degree at Sheffield Hallam University.  	</p>
