--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="social-links">
                 <a href="https://github.com/1144oli">GitHub</a>
                 <a href="https://www.linkedin.com/in/oliver-pedley/">LinkedIn</a>
-                <a href="blog.html">Blog</a>
+                <a href="blog">Blog</a>
             </div>
         </section>
 
