--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <p class="typing-effect">University Student | Linux Enjoyer | Homelabbing Enthusiast</p>
               <nav>
                   <a href="#projects">Projects</a>
-                  <a href="blog">Blogs</a>	
+                  <a href="blog.html">Blogs</a>	
                   <a href="#contact">Contact</a>
               </nav>
           </div>
