--- a/blog.html
+++ b/blog.html
@@ -14,10 +14,9 @@
 
     <div class="container">
         <header>
-            <h1>All Blog Posts</h1>
+            <h1>Blog Posts</h1>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="blog.html">All Posts</a>
             </nav>
         </header>
 
@@ -30,6 +29,7 @@
         </footer>
     </div>
 
+    <script src="drag.js"></script>
     <script src="posts.js"></script>
 </body>
 </html>
