--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why is EVERYONE Homelabbing? | Oli</title>
+    <title>Blog | Oli</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="blogstyle.css">
