Added a university section with a timeline

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Oli | Cyber Security Student</title>
     <link rel="icon" href="/photos/discordpfp.png">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <canvas class="matrix-bg" id="matrix"></canvas>
@@ -26,6 +27,24 @@
         <section id="about" class="section">
             <h2>About Me</h2>
 		<p>Hi! I'm Oli, a 19 year old from the UK &#x1f1ec;&#x1f1e7; currently studying for a Cyber Security with Forensics degree at Sheffield Hallam University.  	</p>
+        </section>
+        <section id="university-timeline" class="section">
+            <h2>University</h2>
+            <timeline-header>Sheffield Hallam University - Cyber Security with Forensics</timeline-header>
+            <div class="timeline-card">
+                <div class="timeline-years" aria-hidden="true"></div>
+                <div class="timeline-track" aria-hidden="true">
+                    <div class="timeline-line"></div>
+                    <div class="timeline-fill" id="timeline-fill"></div>
+                    <div class="timeline-dot start" title="Start: Sep 2024">&nbsp;</div>
+                    <div class="timeline-dot end" title="Expected end: May 2028">&nbsp;</div>
+                    <div class="timeline-current" id="timeline-current" title="Current position"></div>
+                </div>
+                <div class="timeline-labels">
+                    <div class="label-left">Sep 2024</div>
+                    <div class="label-right">May 2028</div>
+                </div>
+            </div>
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
