changed date for 3 years from 4

--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
             <h2>Contact</h2>
 		<p>Lets talk!</p>
             <div class="terminal">
-                <div class="terminal-line"><span class="prompt">oli@debook:~#</span> cat ~/Documents/email.txt</div>
+                <div class="terminal-line"><span class="prompt">oli@debianbook:~#</span> cat ~/Documents/email.txt</div>
 		<div class="terminal-line">oli@cyberoli.uk</div>
-                <div class="terminal-line"><span class="prompt">oli@debook:~#</span> <span id="location-command"></span></div>
+                <div class="terminal-line"><span class="prompt">oli@debianbook:~#</span> <span id="location-command"></span></div>
                 <div class="terminal-line" id="location-output"></div>
+                <div class="terminal-line"><span id="location-caret"></span></div>
             </div>
             <div class="social-links">
                 <a href="https://github.com/1144oli">GitHub</a>
