MAde an image viewer, and did some changes to thinkpad post

--- a/posts.html
+++ b/posts.html
@@ -36,6 +36,7 @@
 
     <script src="drag.js"></script>
     <script src="post.js"></script>
+    <script src="imageviewer.js"></script>
 </body>
 </html>
 
